--- a/Server/frontend/package.json
+++ b/Server/frontend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "babel-loader": "^9.2.1",
