--- a/Server/frontend/package.json
+++ b/Server/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development --watch",
+    "dev": "npx tailwindcss -i ./static/src/input.css -o ./static/src/styles.css --watch",
     "build": "webpack --mode production"
   },
   "keywords": [],
